--- a/WB_Joint_Ownership/app/src/main/res/values/strings.xml
+++ b/WB_Joint_Ownership/app/src/main/res/values/strings.xml
@@ -36,10 +36,12 @@
 	<string name="action_send">Send</string>
 	<string name="prompt_message">Message</string>
 
-	<string name="connect">Connected</string>
-	<string name="disconnect">Disconnected, Please check your internet connection</string>
-	<string name="error_connect">Failed to connect</string>
-
+	<string name="connect">接続しました</string>
+	<!--<string name="connect">Connected</string>-->
+	<string name="disconnect">接続が解除されました。</string>
+	<!--<string name="disconnect">Disconnected, Please check your internet connection</string>-->
+	<string name="error_connect">接続できませんでした</string>
+	<!--<string name="error_connect">Failed to connect</string>-->
 	<!-- messages -->
 	<string name="message_welcome">Welcome to Socket.IO Chat –</string>
 	<plurals name="message_participants">
